==> ComittmentIssues/BouyDev-v2/1. Firmware/STM32 - SPL Driver code/PEripheral Libraries/Ublox Neo 67m/GPS.c <==
#include "GPS.h" //Import macros and functions from GPS.h header

uint8_t init_GPS(void)
{
	init_USART_GPS(9600);
	//send acknowledgement
	UBX_MSG_t flag = UBX_Send_Ack();
	if(flag == UBX_ACK_ACK) //indicates that system is online and functioning
	{
		//configure baude rate
		flag = UBX_Configure_BaudRate();

	} else if(flag == UBX_ERROR) // try different baude rate
	{
		deinit_USART_GPS();
		//it may be that the GPS has already been configured in which case, de init and try again with different baude rate
		init_USART_GPS(115200);
		if (UART4->SR & USART_SR_ORE) // Overrun Error
		UART4->SR &= ~USART_SR_ORE;
		if (UART4->SR & USART_SR_NE) // Noise Error
		UART4->SR &= ~USART_SR_NE;
		if (UART4->SR & USART_SR_FE) // Framing Error
		UART4->SR &= ~USART_SR_FE;
		USART_Cmd(USART_GPS,ENABLE);
		//no config needed
		flag = UBX_Send_Ack(); //test if gps acknowledges on new baudrate

	}
	if(flag == UBX_ERROR) //if there is still no response, initialization unsuccessful
	{
		deinit_USART_GPS();
		return 0;
	}
	 //enable messages GLL ZDA GSA
	 uint8_t gll[] = {0xB5,0x62,0x06,0x01,0x03,0x00,0xF0,0x01,0x01,0xFC,0x12};
	 int len = sizeof(gll)/sizeof(gll[0]);
	 USART_transmit_data(gll,len);
	 uint8_t gsa[] = {0xB5,0x62,0x06,0x01,0x03,0x00,0xF0,0x02,0x01,0xFD,0x14};
	 uint8_t zda[] = {0xB5,0x62,0x06,0x01,0x03,0x00,0xF0,0x08,0x01,0x03,0x20};
	 USART_transmit_data(gsa,len);
	 USART_transmit_data(zda,len);
	 //set device ready to recieve GPS
	 Recieve_GPS_Data = 1;
	 Ack_message = 0;
	 return 1;
}

UBX_MSG_t UBX_Send_Ack(void)
{
	Ack_message = 1;
	GPS_Acknowledgement_State = 0;
	uint8_t ubx_ack_string[] = {0xB5 ,0x62 ,0x06 ,0x09 ,0x0D ,0x00 ,0x00 ,0x00 ,0x00 ,0x00 ,0xFF ,0xFF ,0x00 ,0x00 ,0x00 ,0x00 ,0x00 ,0x00 ,0x17 ,0x31 ,0xBF };
	int size = sizeof(ubx_ack_string)/sizeof(ubx_ack_string[0]);
	USART_transmit_data(ubx_ack_string,size);
	//wait for acknowledge
	Delay_begin_Timeout(100); //set function to timeout if no response recieved
	while(Ack_message)
	{
		if(timeout)
		{
			return UBX_ERROR;
		}
	}

	return GPS_Acknowledgement_State;
}

UBX_MSG_t UBX_Configure_BaudRate(void)
{
	uint8_t ubx_baude_rate_config[] = {0xB5,0x62,0x06,0x00,0x14,0x00,0x01,0x00,0x00,0x00,0xD0,0x08,0x00,0x00,0x00,0xC2,0x01,0x00,0x07,0x00,0x03,0x00,0x00,0x00,0x00,0x00,0xC0,0x7E};
	uint8_t ubx_poll_config[] = {0xB5, 0x62, 0x06, 0x00, 0x01, 0x00, 0x01, 0x08, 0x22};
	int size = sizeof(ubx_baude_rate_config)/sizeof(ubx_baude_rate_config[0]);
	USART_transmit_data(ubx_baude_rate_config,size);
	size = sizeof(ubx_poll_config)/sizeof(ubx_poll_config[0]);
	USART_transmit_data(ubx_baude_rate_config,size);

	//disable UART and reconfigure with new bauderate
	while(USART_GetFlagStatus(USART_GPS,USART_FLAG_TXE) != SET);
	deinit_USART_GPS();
	init_USART_GPS(115200);
	//clear Overun and framing Errors
	if (UART4->SR & USART_SR_ORE) // Overrun Error
	UART4->SR &= ~USART_SR_ORE;

	if (UART4->SR & USART_SR_NE) // Noise Error
	UART4->SR &= ~USART_SR_NE;

	if (UART4->SR & USART_SR_FE) // Framing Error
	UART4->SR &= ~USART_SR_FE;

	USART_Cmd(USART_GPS,ENABLE);

	return UBX_Send_Ack();
}

void USART_GPS_IRQHandler(void)
{
	//idle line detection
	if(USART_GetFlagStatus(USART_GPS,USART_FLAG_IDLE) != RESET)
	{
		//clear reg
		RX_COMPLETE_FLAG = 0;
		volatile uint32_t tmp;
		tmp = USART_GetITStatus(USART_GPS, USART_IT_IDLE);
		tmp = USART_ReceiveData(USART_GPS);
		(void)tmp;

		DMA_Cmd(USART_DMA_RxStream,DISABLE);
		while(DMA_GetCmdStatus(USART_DMA_RxStream) != DISABLE);

	}

}
